# chat-extract

./: .coveragerc  .gitignore  .pylintrc  LICENSE  README.md  justfile  pyproject.toml
.github/: copilot-instructions.md
.github/actions/setup/: action.yml
.github/actions/workflows/: auto_tag.yaml  test.yaml
.github/workflows/: auto_tag.yaml  publish.yaml  test.yaml
chat_extract/: __init__.py  cli.py  extract.py  image_utils.py  models.py
docs/: pypi-setup.md
groupchat_text_extraction/: cli.py  main.py
scripts/: auto-tag.sh
tests/: test_extract.py  test_image_utils.py
